# hello-wasm

./: Cargo.toml
pkg/: hello_wasm_bg.wasm  package.json
